// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders FullPage layout unchanged 1`] = `
<div>
  <div
    class="memori memori-widget memori-layout-fullpage memori-controls-bottom memori--avatar-readyplayerme memori--with-integration"
    data-memori-engine-state="{}"
    data-memori-id="66b4e161-2431-4b21-9b70-d8c27de730ca"
    data-memori-integration="cb3c4776-7f0b-4f97-a773-c32a5d7a3bf1"
    data-memori-name="Memori"
    data-memori-secondary-id="25ced51c-3520-41af-8bbe-222d861b8e32"
    style="height: 100vh;"
  >
    <style>
      @layer integration {
  body, .memori-client, .memori-widget, .memori-drawer, .memori-modal, .memori-header, .memori-dropdown, .memori-select {
    --memori-primary-color: #823ce1;
    --memori-primary: var(--memori-primary-color);
    --memori-primary-hover: color-mix(in oklch, var(--memori-primary), var(--memori-surface-contrast-inverse, black) 15%);
    --memori-primary-active: color-mix(in oklch, var(--memori-primary), var(--memori-surface-contrast-inverse, black) 25%);
    --memori-primary-disabled: color-mix(in oklch, var(--memori-primary), transparent 60%);
    --memori-primary-subtle: color-mix(in oklch, var(--memori-primary), var(--memori-surface-contrast, white) 60%);
    --memori-primary-subtle-hover: color-mix(in oklch, var(--memori-primary), var(--memori-surface-contrast, white) 50%);
    --memori-border-primary: color-mix(in oklch, var(--memori-primary), transparent 70%);
    --memori-border-primary-hover: color-mix(in oklch, var(--memori-primary), transparent 50%);
    --memori-focus-ring-color: color-mix(in oklch, var(--memori-primary), transparent 80%);
    --memori-focus-ring: 0 0 0 3px var(--memori-focus-ring-color);
    --memori-shadow-primary: 0 8px 16px -4px color-mix(in oklch, var(--memori-primary), transparent 70%);
    --memori-skeleton-base: color-mix(in oklch, var(--memori-primary), var(--memori-surface-contrast, white) 85%);
    --memori-skeleton-highlight: color-mix(in oklch, var(--memori-primary), var(--memori-surface-contrast, white) 75%);
  }
  .memori-widget .memori--global-background { filter: blur(5px); }
}

    </style>
    <div
      class="memori--global-background"
    >
      <div
        class="memori--global-background-image"
        style="background-image: url(https://assets.memori.ai/api/v2/asset/364e498c-11da-42d5-9e32-19e5d137d4b8.jpeg);"
      />
    </div>
    <div
      class="memori-spin"
    >
      <div
        class="memori--grid"
      >
        <div
          class="memori--grid-column memori--grid-column-left"
        >
          <div
            class="memori--avatar-wrapper memori--avatar-readyplayerme"
          >
            <div
              class="memori--blob-container"
            >
              <div
                class="memori-blob"
              >
                <div
                  class="mainDiv"
                />
                <div
                  class="mainDiv"
                />
                <div
                  class="mainDiv"
                />
                <div
                  class="mainDiv"
                />
                <div
                  class="mainDiv"
                />
              </div>
            </div>
          </div>
          <div
            class="memori--avatar-toggle"
          >
            <button
              class="memori-button memori-button--ghost memori-button--md"
              tabindex="0"
              type="button"
            >
              <span
                class="memori-button__icon"
              >
                <svg
                  class="lucide lucide-eye-off"
                  fill="none"
                  height="24"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                  viewBox="0 0 24 24"
                  width="24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M10.733 5.076a10.744 10.744 0 0 1 11.205 6.575 1 1 0 0 1 0 .696 10.747 10.747 0 0 1-1.444 2.49"
                  />
                  <path
                    d="M14.084 14.158a3 3 0 0 1-4.242-4.242"
                  />
                  <path
                    d="M17.479 17.499a10.75 10.75 0 0 1-15.417-5.151 1 1 0 0 1 0-.696 10.75 10.75 0 0 1 4.446-5.143"
                  />
                  <path
                    d="m2 2 20 20"
                  />
                </svg>
              </span>
              <span
                class="memori-button__content"
              >
                <span
                  class="memori--avatar-toggle-text"
                >
                  hide
                </span>
              </span>
            </button>
          </div>
          <div
            id="extension"
          />
        </div>
        <div
          class="memori-chat-layout--main "
        >
          <div
            class="memori-chat-layout--controls "
          >
            <div
              class="memori-chat-layout--header "
            >
              <div
                class="memori-header"
              >
                <span
                  class="styles-module__root___-ALla"
                >
                  <span
                    class="styles-module__trigger___V2aIF"
                    id="base-ui-:r1:"
                  >
                    <span
                      style="display: inline-flex;"
                    >
                      <button
                        aria-label="widget.sound"
                        class="memori-button memori-button--primary memori-button--md memori-button--icon-only"
                        tabindex="0"
                        type="button"
                      >
                        <span
                          class="memori-button__icon"
                        >
                          <svg
                            class="lucide lucide-volume2"
                            fill="none"
                            height="24"
                            stroke="currentColor"
                            stroke-linecap="round"
                            stroke-linejoin="round"
                            stroke-width="2"
                            viewBox="0 0 24 24"
                            width="24"
                            xmlns="http://www.w3.org/2000/svg"
                          >
                            <path
                              d="M11 4.702a.705.705 0 0 0-1.203-.498L6.413 7.587A1.4 1.4 0 0 1 5.416 8H3a1 1 0 0 0-1 1v6a1 1 0 0 0 1 1h2.416a1.4 1.4 0 0 1 .997.413l3.383 3.384A.705.705 0 0 0 11 19.298z"
                            />
                            <path
                              d="M16 9a5 5 0 0 1 0 6"
                            />
                            <path
                              d="M19.364 18.364a9 9 0 0 0 0-12.728"
                            />
                          </svg>
                        </span>
                      </button>
                    </span>
                  </span>
                </span>
                <div
                  class="memori-dropdown memori-share-button memori-share-button--align-left"
                >
                  <span
                    class="styles-module__root___-ALla"
                  >
                    <span
                      class="styles-module__trigger___V2aIF"
                      id="base-ui-:r7:"
                    >
                      <button
                        aria-expanded="false"
                        aria-haspopup="menu"
                        class="memori-button memori-button--primary memori-button--md memori-button--icon-only"
                        id="base-ui-:r8:"
                        tabindex="0"
                        type="button"
                      >
                        <span
                          class="memori-button__icon"
                        >
                          <svg
                            class="lucide lucide-share2"
                            fill="none"
                            height="24"
                            stroke="currentColor"
                            stroke-linecap="round"
                            stroke-linejoin="round"
                            stroke-width="2"
                            viewBox="0 0 24 24"
                            width="24"
                            xmlns="http://www.w3.org/2000/svg"
                          >
                            <circle
                              cx="18"
                              cy="5"
                              r="3"
                            />
                            <circle
                              cx="6"
                              cy="12"
                              r="3"
                            />
                            <circle
                              cx="18"
                              cy="19"
                              r="3"
                            />
                            <line
                              x1="8.59"
                              x2="15.42"
                              y1="13.51"
                              y2="17.49"
                            />
                            <line
                              x1="15.41"
                              x2="8.59"
                              y1="6.51"
                              y2="10.49"
                            />
                          </svg>
                        </span>
                      </button>
                    </span>
                  </span>
                </div>
              </div>
            </div>
            <div
              class="memori--start-panel"
            >
              <div
                class="memori--cover"
              />
              <div
                class="memori--start-panel__body"
              >
                <div
                  class="memori--title-container"
                >
                  <picture
                    class="memori--avatar"
                  >
                    <source
                      src="https://aisuru.com/images/aisuru/square_logo.png"
                    />
                    <img
                      alt="Memori"
                      src="https://aisuru.com/images/aisuru/square_logo.png"
                    />
                  </picture>
                  <div
                    class="memori--title-container__content"
                  >
                    <h2
                      class="memori--title"
                    >
                      Memori
                    </h2>
                    <div
                      class="memori-expandable memori--description-text"
                    >
                      <div
                        class="memori-expandable__inner"
                        style="max-height: 9999px;"
                      >
                        Lorem ipsum.
                      </div>
                    </div>
                  </div>
                  <div
                    class="memori--completion-provider-status--loading"
                  >
                    <div
                      class="memori-spin memori-spin--spinning"
                    >
                      <div
                        aria-label="Loading"
                        aria-live="polite"
                        class="memori-spin__overlay"
                        role="status"
                      >
                        <div
                          class="memori-spin__container"
                        >
                          <svg
                            aria-hidden="true"
                            class="lucide lucide-loader-circle memori-spin__icon"
                            fill="none"
                            height="24"
                            stroke="currentColor"
                            stroke-linecap="round"
                            stroke-linejoin="round"
                            stroke-width="2"
                            viewBox="0 0 24 24"
                            width="24"
                            xmlns="http://www.w3.org/2000/svg"
                          >
                            <path
                              d="M21 12a9 9 0 1 1-6.219-8.56"
                            />
                          </svg>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  class="memori--description"
                >
                  <div
                    class="memori--language-row"
                  >
                    <span
                      class="memori--language-row__label"
                    >
                      write_and_speak.chatLanguageLabel
                    </span>
                    <div
                      class="memori--language-row__control"
                    >
                      <div
                        class="memori-combobox memori-combobox--language-chooser memori--language-row__combobox"
                      >
                        <label
                          class="memori-combobox__label"
                          for=":ra:"
                          id=":ra:-label"
                        >
                          write_and_speak.chatLanguageLabel
                        </label>
                        <button
                          aria-expanded="false"
                          aria-haspopup="dialog"
                          aria-labelledby=":ra:-label"
                          class="memori-combobox__trigger"
                          id=":ra:"
                          role="combobox"
                          tabindex="0"
                          type="button"
                        >
                          <span
                            class="memori-combobox__value"
                          >
                            Italian
                          </span>
                          <span
                            aria-hidden="true"
                            class="memori-combobox__trigger-icon"
                          >
                            <svg
                              aria-hidden="true"
                              class="lucide lucide-chevron-down"
                              fill="none"
                              height="16"
                              stroke="currentColor"
                              stroke-linecap="round"
                              stroke-linejoin="round"
                              stroke-width="2"
                              viewBox="0 0 24 24"
                              width="16"
                              xmlns="http://www.w3.org/2000/svg"
                            >
                              <path
                                d="m6 9 6 6 6-6"
                              />
                            </svg>
                          </span>
                        </button>
                        <input
                          aria-hidden="true"
                          id="base-ui-:rb:"
                          name="user-lang-pref"
                          style="overflow: hidden; white-space: nowrap; position: fixed; top: 0px; left: 0px; border: 0px; padding: 0px; width: 1px; height: 1px; margin: -1px;"
                          tabindex="-1"
                          value="IT"
                        />
                      </div>
                    </div>
                  </div>
                  <div
                    class="memori--start-panel__divider"
                    role="presentation"
                  />
                  <div
                    class="memori--start-panel__notice"
                  >
                    <svg
                      aria-hidden="true"
                      class="lucide lucide-circle-help memori--start-panel__notice-icon"
                      fill="none"
                      height="24"
                      stroke="currentColor"
                      stroke-linecap="round"
                      stroke-linejoin="round"
                      stroke-width="2"
                      viewBox="0 0 24 24"
                      width="24"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <circle
                        cx="12"
                        cy="12"
                        r="10"
                      />
                      <path
                        d="M9.09 9a3 3 0 0 1 5.83 1c0 2-3 3-3 3"
                      />
                      <path
                        d="M12 17h.01"
                      />
                    </svg>
                    <p
                      class="memori--start-panel__notice-text"
                    >
                      write_and_speak.pagePrivacyExplanation
                    </p>
                    <span
                      class="styles-module__root___-ALla"
                    >
                      <span
                        class="styles-module__trigger___V2aIF"
                        id="base-ui-:re:"
                      >
                        <button
                          aria-label="privacyPolicy"
                          class="memori-button memori-button--toolbar memori-button--sm memori--privacy-popover-trigger memori--start-panel__notice-more"
                          tabindex="0"
                          type="button"
                        >
                          <span
                            class="memori-button__content"
                          >
                            <svg
                              class="lucide lucide-info memori--start-privacy-explanation-icon"
                              fill="none"
                              height="24"
                              stroke="currentColor"
                              stroke-linecap="round"
                              stroke-linejoin="round"
                              stroke-width="2"
                              viewBox="0 0 24 24"
                              width="24"
                              xmlns="http://www.w3.org/2000/svg"
                            >
                              <circle
                                cx="12"
                                cy="12"
                                r="10"
                              />
                              <path
                                d="M12 16v-4"
                              />
                              <path
                                d="M12 8h.01"
                              />
                            </svg>
                          </span>
                        </button>
                      </span>
                    </span>
                  </div>
                  <p
                    class="memori--start-description"
                  >
                    write_and_speak.pageTryMeExplanation
                  </p>
                  <button
                    class="memori-button memori-button--primary memori-button--lg"
                    style="font-weight: var(--memori-text-weight-bold);"
                    tabindex="0"
                    type="button"
                  >
                    <span
                      class="memori-button__content"
                    >
                      write_and_speak.tryMeButton
                    </span>
                  </button>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="memori--powered-by"
        >
          <img
            alt=""
            src="https://aisuru.com/images/aisuru/logo.png"
          />
          <p>
            <span
              class="sr-only"
            >
              Powered by
            </span>
            <a
              href="https://memori.ai/it?integrationID=cb3c4776-7f0b-4f97-a773-c32a5d7a3bf1&memori=aisuru.com-username-Memori"
              rel="noopener noreferrer"
              target="_blank"
            >
              Memori.AI
            </a>
          </p>
        </div>
      </div>
    </div>
    <audio
      id="memori-audio"
      src="https://aisuru.com/intro.mp3"
      style="display: none;"
    />
  </div>
  <div
    aria-atomic="false"
    aria-label="Notifications"
    aria-live="polite"
    aria-relevant="additions text"
    class="memori-alert-viewport memori-alert-viewport--top-end"
    role="region"
    tabindex="-1"
  />
</div>
`;

exports[`renders FullPage layout with root css properties unchanged 1`] = `
<div>
  <div
    class="memori memori-widget memori-layout-fullpage memori-controls-bottom memori--avatar-readyplayerme memori--with-integration"
    data-memori-engine-state="{}"
    data-memori-id="66b4e161-2431-4b21-9b70-d8c27de730ca"
    data-memori-integration="cb3c4776-7f0b-4f97-a773-c32a5d7a3bf1"
    data-memori-name="Memori"
    data-memori-secondary-id="25ced51c-3520-41af-8bbe-222d861b8e32"
    style="height: 100vh;"
  >
    <style>
      @layer integration {
  :root, body, .memori-client, .memori-widget, .memori-drawer, .memori-modal, .memori-header, .memori-dropdown, .memori-select {
    --memori-primary-color: #823ce1;
    --memori-primary: var(--memori-primary-color);
    --memori-primary-hover: color-mix(in oklch, var(--memori-primary), var(--memori-surface-contrast-inverse, black) 15%);
    --memori-primary-active: color-mix(in oklch, var(--memori-primary), var(--memori-surface-contrast-inverse, black) 25%);
    --memori-primary-disabled: color-mix(in oklch, var(--memori-primary), transparent 60%);
    --memori-primary-subtle: color-mix(in oklch, var(--memori-primary), var(--memori-surface-contrast, white) 60%);
    --memori-primary-subtle-hover: color-mix(in oklch, var(--memori-primary), var(--memori-surface-contrast, white) 50%);
    --memori-border-primary: color-mix(in oklch, var(--memori-primary), transparent 70%);
    --memori-border-primary-hover: color-mix(in oklch, var(--memori-primary), transparent 50%);
    --memori-focus-ring-color: color-mix(in oklch, var(--memori-primary), transparent 80%);
    --memori-focus-ring: 0 0 0 3px var(--memori-focus-ring-color);
    --memori-shadow-primary: 0 8px 16px -4px color-mix(in oklch, var(--memori-primary), transparent 70%);
    --memori-skeleton-base: color-mix(in oklch, var(--memori-primary), var(--memori-surface-contrast, white) 85%);
    --memori-skeleton-highlight: color-mix(in oklch, var(--memori-primary), var(--memori-surface-contrast, white) 75%);
  }
  .memori-widget .memori--global-background { filter: blur(5px); }
}

    </style>
    <div
      class="memori--global-background"
    >
      <div
        class="memori--global-background-image"
        style="background-image: url(https://assets.memori.ai/api/v2/asset/364e498c-11da-42d5-9e32-19e5d137d4b8.jpeg);"
      />
    </div>
    <div
      class="memori-spin"
    >
      <div
        class="memori--grid"
      >
        <div
          class="memori--grid-column memori--grid-column-left"
        >
          <div
            class="memori--avatar-wrapper memori--avatar-readyplayerme"
          >
            <div
              class="memori--blob-container"
            >
              <div
                class="memori-blob"
              >
                <div
                  class="mainDiv"
                />
                <div
                  class="mainDiv"
                />
                <div
                  class="mainDiv"
                />
                <div
                  class="mainDiv"
                />
                <div
                  class="mainDiv"
                />
              </div>
            </div>
          </div>
          <div
            class="memori--avatar-toggle"
          >
            <button
              class="memori-button memori-button--ghost memori-button--md"
              tabindex="0"
              type="button"
            >
              <span
                class="memori-button__icon"
              >
                <svg
                  class="lucide lucide-eye-off"
                  fill="none"
                  height="24"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                  viewBox="0 0 24 24"
                  width="24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M10.733 5.076a10.744 10.744 0 0 1 11.205 6.575 1 1 0 0 1 0 .696 10.747 10.747 0 0 1-1.444 2.49"
                  />
                  <path
                    d="M14.084 14.158a3 3 0 0 1-4.242-4.242"
                  />
                  <path
                    d="M17.479 17.499a10.75 10.75 0 0 1-15.417-5.151 1 1 0 0 1 0-.696 10.75 10.75 0 0 1 4.446-5.143"
                  />
                  <path
                    d="m2 2 20 20"
                  />
                </svg>
              </span>
              <span
                class="memori-button__content"
              >
                <span
                  class="memori--avatar-toggle-text"
                >
                  hide
                </span>
              </span>
            </button>
          </div>
          <div
            id="extension"
          />
        </div>
        <div
          class="memori-chat-layout--main "
        >
          <div
            class="memori-chat-layout--controls "
          >
            <div
              class="memori-chat-layout--header "
            >
              <div
                class="memori-header"
              >
                <span
                  class="styles-module__root___-ALla"
                >
                  <span
                    class="styles-module__trigger___V2aIF"
                    id="base-ui-:ro:"
                  >
                    <span
                      style="display: inline-flex;"
                    >
                      <button
                        aria-label="widget.sound"
                        class="memori-button memori-button--primary memori-button--md memori-button--icon-only"
                        tabindex="0"
                        type="button"
                      >
                        <span
                          class="memori-button__icon"
                        >
                          <svg
                            class="lucide lucide-volume2"
                            fill="none"
                            height="24"
                            stroke="currentColor"
                            stroke-linecap="round"
                            stroke-linejoin="round"
                            stroke-width="2"
                            viewBox="0 0 24 24"
                            width="24"
                            xmlns="http://www.w3.org/2000/svg"
                          >
                            <path
                              d="M11 4.702a.705.705 0 0 0-1.203-.498L6.413 7.587A1.4 1.4 0 0 1 5.416 8H3a1 1 0 0 0-1 1v6a1 1 0 0 0 1 1h2.416a1.4 1.4 0 0 1 .997.413l3.383 3.384A.705.705 0 0 0 11 19.298z"
                            />
                            <path
                              d="M16 9a5 5 0 0 1 0 6"
                            />
                            <path
                              d="M19.364 18.364a9 9 0 0 0 0-12.728"
                            />
                          </svg>
                        </span>
                      </button>
                    </span>
                  </span>
                </span>
                <div
                  class="memori-dropdown memori-share-button memori-share-button--align-left"
                >
                  <span
                    class="styles-module__root___-ALla"
                  >
                    <span
                      class="styles-module__trigger___V2aIF"
                      id="base-ui-:ru:"
                    >
                      <button
                        aria-expanded="false"
                        aria-haspopup="menu"
                        class="memori-button memori-button--primary memori-button--md memori-button--icon-only"
                        id="base-ui-:rv:"
                        tabindex="0"
                        type="button"
                      >
                        <span
                          class="memori-button__icon"
                        >
                          <svg
                            class="lucide lucide-share2"
                            fill="none"
                            height="24"
                            stroke="currentColor"
                            stroke-linecap="round"
                            stroke-linejoin="round"
                            stroke-width="2"
                            viewBox="0 0 24 24"
                            width="24"
                            xmlns="http://www.w3.org/2000/svg"
                          >
                            <circle
                              cx="18"
                              cy="5"
                              r="3"
                            />
                            <circle
                              cx="6"
                              cy="12"
                              r="3"
                            />
                            <circle
                              cx="18"
                              cy="19"
                              r="3"
                            />
                            <line
                              x1="8.59"
                              x2="15.42"
                              y1="13.51"
                              y2="17.49"
                            />
                            <line
                              x1="15.41"
                              x2="8.59"
                              y1="6.51"
                              y2="10.49"
                            />
                          </svg>
                        </span>
                      </button>
                    </span>
                  </span>
                </div>
              </div>
            </div>
            <div
              class="memori--start-panel"
            >
              <div
                class="memori--cover"
              />
              <div
                class="memori--start-panel__body"
              >
                <div
                  class="memori--title-container"
                >
                  <picture
                    class="memori--avatar"
                  >
                    <source
                      src="https://aisuru.com/images/aisuru/square_logo.png"
                    />
                    <img
                      alt="Memori"
                      src="https://aisuru.com/images/aisuru/square_logo.png"
                    />
                  </picture>
                  <div
                    class="memori--title-container__content"
                  >
                    <h2
                      class="memori--title"
                    >
                      Memori
                    </h2>
                    <div
                      class="memori-expandable memori--description-text"
                    >
                      <div
                        class="memori-expandable__inner"
                        style="max-height: 9999px;"
                      >
                        Lorem ipsum.
                      </div>
                    </div>
                  </div>
                  <div
                    class="memori--completion-provider-status--loading"
                  >
                    <div
                      class="memori-spin memori-spin--spinning"
                    >
                      <div
                        aria-label="Loading"
                        aria-live="polite"
                        class="memori-spin__overlay"
                        role="status"
                      >
                        <div
                          class="memori-spin__container"
                        >
                          <svg
                            aria-hidden="true"
                            class="lucide lucide-loader-circle memori-spin__icon"
                            fill="none"
                            height="24"
                            stroke="currentColor"
                            stroke-linecap="round"
                            stroke-linejoin="round"
                            stroke-width="2"
                            viewBox="0 0 24 24"
                            width="24"
                            xmlns="http://www.w3.org/2000/svg"
                          >
                            <path
                              d="M21 12a9 9 0 1 1-6.219-8.56"
                            />
                          </svg>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  class="memori--description"
                >
                  <div
                    class="memori--language-row"
                  >
                    <span
                      class="memori--language-row__label"
                    >
                      write_and_speak.chatLanguageLabel
                    </span>
                    <div
                      class="memori--language-row__control"
                    >
                      <div
                        class="memori-combobox memori-combobox--language-chooser memori--language-row__combobox"
                      >
                        <label
                          class="memori-combobox__label"
                          for=":r11:"
                          id=":r11:-label"
                        >
                          write_and_speak.chatLanguageLabel
                        </label>
                        <button
                          aria-expanded="false"
                          aria-haspopup="dialog"
                          aria-labelledby=":r11:-label"
                          class="memori-combobox__trigger"
                          id=":r11:"
                          role="combobox"
                          tabindex="0"
                          type="button"
                        >
                          <span
                            class="memori-combobox__value"
                          >
                            Italian
                          </span>
                          <span
                            aria-hidden="true"
                            class="memori-combobox__trigger-icon"
                          >
                            <svg
                              aria-hidden="true"
                              class="lucide lucide-chevron-down"
                              fill="none"
                              height="16"
                              stroke="currentColor"
                              stroke-linecap="round"
                              stroke-linejoin="round"
                              stroke-width="2"
                              viewBox="0 0 24 24"
                              width="16"
                              xmlns="http://www.w3.org/2000/svg"
                            >
                              <path
                                d="m6 9 6 6 6-6"
                              />
                            </svg>
                          </span>
                        </button>
                        <input
                          aria-hidden="true"
                          id="base-ui-:r12:"
                          name="user-lang-pref"
                          style="overflow: hidden; white-space: nowrap; position: fixed; top: 0px; left: 0px; border: 0px; padding: 0px; width: 1px; height: 1px; margin: -1px;"
                          tabindex="-1"
                          value="IT"
                        />
                      </div>
                    </div>
                  </div>
                  <div
                    class="memori--start-panel__divider"
                    role="presentation"
                  />
                  <div
                    class="memori--start-panel__notice"
                  >
                    <svg
                      aria-hidden="true"
                      class="lucide lucide-circle-help memori--start-panel__notice-icon"
                      fill="none"
                      height="24"
                      stroke="currentColor"
                      stroke-linecap="round"
                      stroke-linejoin="round"
                      stroke-width="2"
                      viewBox="0 0 24 24"
                      width="24"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <circle
                        cx="12"
                        cy="12"
                        r="10"
                      />
                      <path
                        d="M9.09 9a3 3 0 0 1 5.83 1c0 2-3 3-3 3"
                      />
                      <path
                        d="M12 17h.01"
                      />
                    </svg>
                    <p
                      class="memori--start-panel__notice-text"
                    >
                      write_and_speak.pagePrivacyExplanation
                    </p>
                    <span
                      class="styles-module__root___-ALla"
                    >
                      <span
                        class="styles-module__trigger___V2aIF"
                        id="base-ui-:r15:"
                      >
                        <button
                          aria-label="privacyPolicy"
                          class="memori-button memori-button--toolbar memori-button--sm memori--privacy-popover-trigger memori--start-panel__notice-more"
                          tabindex="0"
                          type="button"
                        >
                          <span
                            class="memori-button__content"
                          >
                            <svg
                              class="lucide lucide-info memori--start-privacy-explanation-icon"
                              fill="none"
                              height="24"
                              stroke="currentColor"
                              stroke-linecap="round"
                              stroke-linejoin="round"
                              stroke-width="2"
                              viewBox="0 0 24 24"
                              width="24"
                              xmlns="http://www.w3.org/2000/svg"
                            >
                              <circle
                                cx="12"
                                cy="12"
                                r="10"
                              />
                              <path
                                d="M12 16v-4"
                              />
                              <path
                                d="M12 8h.01"
                              />
                            </svg>
                          </span>
                        </button>
                      </span>
                    </span>
                  </div>
                  <p
                    class="memori--start-description"
                  >
                    write_and_speak.pageTryMeExplanation
                  </p>
                  <button
                    class="memori-button memori-button--primary memori-button--lg"
                    style="font-weight: var(--memori-text-weight-bold);"
                    tabindex="0"
                    type="button"
                  >
                    <span
                      class="memori-button__content"
                    >
                      write_and_speak.tryMeButton
                    </span>
                  </button>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="memori--powered-by"
        >
          <img
            alt=""
            src="https://aisuru.com/images/aisuru/logo.png"
          />
          <p>
            <span
              class="sr-only"
            >
              Powered by
            </span>
            <a
              href="https://memori.ai/it?integrationID=cb3c4776-7f0b-4f97-a773-c32a5d7a3bf1&memori=aisuru.com-username-Memori"
              rel="noopener noreferrer"
              target="_blank"
            >
              Memori.AI
            </a>
          </p>
        </div>
      </div>
    </div>
    <audio
      id="memori-audio"
      src="https://aisuru.com/intro.mp3"
      style="display: none;"
    />
  </div>
  <div
    aria-atomic="false"
    aria-label="Notifications"
    aria-live="polite"
    aria-relevant="additions text"
    class="memori-alert-viewport memori-alert-viewport--top-end"
    role="region"
    tabindex="-1"
  />
</div>
`;
